tests/snapshots/run_wpt_conformance__trtx_batchNormalization_float16_5D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "batch_normalization.https.any.js",
    "batchNormalization float16 5D tensor default options",
    "trtx",
    "PASS",
)
