tests/snapshots/run_wpt_conformance__trtx_batchNormalization_float32_2D_constant_tensors_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "batch_normalization_constant.https.any.js",
    "batchNormalization float32 2D constant tensors default options",
    "trtx",
    "PASS",
)
